[package]
name = "fvad"
version = "0.1.3"
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
edition = "2018"
description = "VAD library based on WebRTC's VAD engine"
repository = "https://github.com/rvolosatovs/fvad"
documentation = "https://docs.rs/fvad"
license = "MIT OR Apache-2.0"
keywords = ["vad", "fvad"]
categories = ["multimedia::audio"]

[dependencies]
libfvad-sys = {git = "https://github.com/xd009642/libfvad-sys", branch = "version/bump-fvad"  }
